# LLMs-0-to-100

./: .gitignore  Course Outline.md  MODULE_02_HANDOVER.md  README.md  build_course.py  handoff.md  main.py  notes_m2.md  pyproject.toml  todo.txt
exercises/: README.md  pyproject.toml
exercises/module_01_introduction/: README.md  exercise.py
exercises/module_01_introduction/data/: README.md
exercises/module_01_introduction/quiz/: q1_most_common_character.py  q2_model_order.py  q3_conditional_probability.py  q4_entropy.py  q5_shannons_insight.py
exercises/module_01_introduction/solution/quiz/: q1_most_common_character.py  q2_model_order.py  q3_conditional_probability.py  q4_entropy.py  q5_shannons_insight.py
exercises/module_01_introduction/src/: generate.py  main.py  ngrams.py
exercises/module_02_perceptrons/: README.md  exercise.py
exercises/module_02_perceptrons/data/: linear_separable.csv  non_linear_separable.csv
exercises/module_02_perceptrons/solution/: exercise.py
exercises/module_02_perceptrons/src/: main.py  neuron.py  visualization.py
exercises/module_03_attention/: README.md  exercise.py
exercises/module_03_attention/solution/: exercise.py
exercises/module_03_attention/src/: main.py  visualization.py
exercises/module_04_architectures/: README.md  exercise.py
exercises/module_04_architectures/solution/: exercise.py
exercises/module_05_pretraining/: README.md  exercise.py
exercises/module_05_pretraining/solution/: exercise.py
exercises/module_05_pretraining/src/: main.py  visualization.py
slides/: build.mjs  build.py
(+119 files in other folders)
